[package]
name = "transient-hashset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full"] }
hashbrown = "0.11"
log = "0.4"
pretty_env_logger = "0.4"
evmap = "10.0"
flurry = "0.3"

[dev-dependencies]
criterion = "0.3"
random-string = "1.0"
itertools = "0.10"
futures = "0.3"

[[bench]]
name = "my_benchmark"
harness = false